--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favcion/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- og metadata -->
+    <meta property="og:title" content="Pixel Party" />
+    <meta property="og:site_name" content="Pixel Party" />
+    <meta property="og:url" content="pixel.surajthotakura.com" />
+    <meta property="og:description" content="Welcome to the world of pixels." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/meta-banner.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixel Party</title>
   </head>
